trunk/Archive2/b4/313b573874c0b1/output
main.cpp: In function 'int main()':
main.cpp:42:28: error: cannot convert 'implicit' to 'int' in initialization
     int convert = implicit{};
                            ^
main.cpp:42:9: warning: unused variable 'convert' [-Wunused-variable]
     int convert = implicit{};
         ^
